igw.tf
#3 create Internet gateway

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}
