vpc.tf
#1 create a vpc
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags={
    Name="terraform-vpc"
  }
}
